erDiagram

    Chain {
        string id PK
        string createdBy FK
        string currency FK
        string defaultTaxGroupId FK "nullable"
        string name
        string logoUrl "nullable"
        timestamp archivedAt "nullable"
        timestamp createdAt
        timestamp updatedAt
    }

    Zone {
        string id PK
        string chainId FK
        string name
        timestamp archivedAt "nullable"
        timestamp createdAt
        timestamp updatedAt
    }

    Restaurant {
        string id PK
        string chainId FK
        string zoneId FK "nullable"
        string currency FK
        string defaultTaxGroupId FK "nullable"
        string name
        string logoUrl "nullable"
        string welcomeMessage "nullable"
        string address "nullable"
        boolean allowMobileOrdering
        boolean allowWaiterJoinTables
        timestamp archivedAt "nullable"
        timestamp createdAt
        timestamp updatedAt
    }

    AuditLog {
        string id PK
        string actorUserId FK
        string chainId "nullable"
        string restaurantId "nullable"
        string action "CREATE|UPDATE|DELETE|LOGIN|OPEN_SESSION|CLOSE_SESSION|APPLY_ADJUSTMENT|REGISTER_CONTRIBUTION|RUN_ANALYTICS_JOB"
        string entityType
        string entityId
        jsonb before
        jsonb after
        jsonb metadata "nullable"
        string ipAddress "nullable"
        string userAgent "nullable"
        string requestId "nullable"
        timestamp createdAt
    }

    Chain ||--o{ Zone : "tiene"
    Chain ||--o{ Restaurant : "tiene"
    Zone ||--o{ Restaurant : "agrupa"
    AppUser ||--o{ Chain : "crea"
    AppUser ||--o{ AuditLog : "genera"
    Currency ||--o{ Chain : "usada"
    Currency ||--o{ Restaurant : "usada"
